@@ -14,6 +14,7 @@ FLL_PACKAGES=(
       kpat
       kmahjongg
       kshisen
+      pokerth
 )
 
 FLL_POST_PROCESSING=(
